deployment/base/billing-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-deployment
  labels:
    app: billing-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-service
      app.type: microservice
  template:
    metadata:
      labels:
        app: billing-service
        app.type: microservice
      annotations:
        sidecar.opentelemetry.io/inject: "otel-collector"
        instrumentation.opentelemetry.io/inject-java: "true"
    spec:
      containers:
        - name: billing-service
          image: okworkshopacr.azurecr.io/billing:latest
          ports:
            - containerPort: 8080
              name: http
